<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Deseos_act">

  <androidx.cardview.widget.CardView
      android:id="@+id/cardView2"
      android:layout_width="325dp"
      android:layout_height="159dp"
      android:layout_marginTop="36dp"
      app:cardCornerRadius="25dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.468"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <ImageView
          android:id="@+id/imageView5"
          android:contentDescription="@string/imagen"
          android:layout_width="147dp"
          android:layout_height="111dp"
          android:layout_marginStart="16dp"
          android:layout_marginTop="24dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/control2" />

      <TextView
          android:id="@+id/textView3"
          android:layout_width="143dp"
          android:layout_height="105dp"
          android:layout_marginTop="28dp"
          android:layout_marginEnd="16dp"
          android:text="@string/en_esta_secci_n_podr_s_gestionar_tu_lista_de_juegos_deseados"
          android:textColor="#000000"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:layout_width="328dp"
      android:layout_height="449dp"
      android:layout_marginTop="28dp"
      app:cardCornerRadius="25dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.439"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cardView2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <LinearLayout
          android:id="@+id/linearLayout3"
          android:layout_width="278dp"
          android:layout_height="142dp"
          android:layout_marginTop="16dp"
          android:orientation="vertical"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.486"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/ptCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Ingrese el codigo"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/ptnombre"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingrese_el_nombre"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/ptCategoria"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/ingrese_la_categoria"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

      </LinearLayout>

      <LinearLayout
          android:layout_width="274dp"
          android:layout_height="237dp"
          android:layout_marginTop="16dp"
          android:orientation="vertical"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/linearLayout3">


        <Button
            android:id="@+id/btnAñadir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#EA1515"
            android:text="@string/a_adir_juego"
            app:cornerRadius="25dp" />

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#EA1515"
            android:text="@string/buscar_juego"
            app:cornerRadius="25dp" />

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#EA1515"
            android:text="@string/actualizar_juego"
            app:cornerRadius="25dp" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#EA1515"
            android:minHeight="48dp"
            android:text="@string/eliminar_juego"
            app:cornerRadius="25dp" />
      </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>