<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsumosActivity">

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="32dp"
      app:cardCornerRadius="25dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textView4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:text="@string/tarjetas_de_regalo"
          android:textAlignment="center"
          android:textColor="@android:color/holo_red_dark"
          android:textSize="24sp" />

      <TextView
          android:id="@+id/textView5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:text="@string/bienvenido_a_la_secci_n_de_tarjetas_de_regalo_donde_podr_s_escoger_y_comprar_entre_las_tarjetas_de_regalo_disponibles_para_luego_cajearlas_en_tu_plataforma_de_videojuegos_favorita" />

      <TextView
          android:id="@+id/textView7"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:text="@string/tarjeta_bronce_2500_clp_ntarjeta_plata_5000_clp_ntarjeta_de_oro_12000_clp_ntarjeta_platino_25000_clp"
          android:textColor="@android:color/background_dark"
          android:textSize="16sp" />

      <Spinner
          android:id="@+id/spinner"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:minHeight="48dp"
          tools:ignore="SpeakableTextPresentCheck" />

      <TextView
          android:id="@+id/textView8"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:text="TextView"
          android:textAlignment="center" />

      <RatingBar
          android:id="@+id/ratingBar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:numStars="5"
          tools:ignore="SpeakableTextPresentCheck" />

      <Button
          android:id="@+id/button7"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:text="@string/calcular" />

      <Button
          android:id="@+id/button8"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:text="@string/comprar" />
    </LinearLayout>
  </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>