<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="center|center_horizontal|center_vertical">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bienvenido_a_game_code"
                            android:textAlignment="center"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="24sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:clipChildren="true"
                        android:gravity="clip_horizontal|center|clip_vertical|fill_horizontal">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="334dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/game_code_es_una_tienda_online_dedicada_a_la_venta_de_juegos_digitales_aqu_vas_a_poder_encontrar_una_amplia_variedad_de_juegos_de_acci_n_aventuras_puzzles_y_mucho_m_s_procedentes_de_desarrolladores_peque_os_hasta_los_m_s_grandes_cada_entusiasta_del_gaming_podr_encontrar_el_juego_que_quiere_y_a_un_buen_precio"
                            android:textAlignment="textStart" />
                    </TableRow>

                </TableLayout>

            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/img_btn1"
                        tools:ignore="ImageContrastCheck"
                        tools:srcCompat="@tools:sample/avatars" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_weight="2"
                        android:contentDescription="@string/img_btn2"
                        tools:srcCompat="@tools:sample/avatars" />

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/img_btn3"
                        tools:ignore="ImageContrastCheck"
                        tools:srcCompat="@tools:sample/avatars" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="center">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <Button
                            android:id="@+id/button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/mis_juegos"
                            app:cornerRadius="25dp" />

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/mis_ofertas"
                            app:cornerRadius="25dp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <Button
                            android:id="@+id/button5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/tarjetas_de_regalo"
                            app:cornerRadius="25dp" />

                        <Button
                            android:id="@+id/button6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/tienda"
                            app:cornerRadius="25dp" />
                    </TableRow>

                </TableLayout>
            </androidx.cardview.widget.CardView>
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>